# ssl-foundations

./: pyproject.toml
src/eval/: knn.py  linear_probe.py  run_eval.py  utils.py
src/eval/data/: datasets.py
src/eval/models/: backbone.py
