[project]
name = "ssl-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MrudhuhasM", email = "mrudhuhas@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.8.0",
    "timm>=1.0.26",
]

[project.scripts]
ssl-foundations = "eval.run_eval:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
